plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.14'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.ages'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '11'
	targetCompatibility = '11'  // Adicionando targetCompatibility
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Dependencies
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'com.auth0:java-jwt:4.4.0'
	implementation 'com.microsoft.sqlserver:mssql-jdbc:12.4.1.jre11'
	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'

	// Test Dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'  // Explicit JUnit dependency
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'  // Explicit JUnit runtime dependency

	// Lombok for reduced boilerplate code
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Banco de dados H2 para desenvolvimento (usado apenas em ambiente de desenvolvimento)
	runtimeOnly 'com.h2database:h2'
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()  // Garante o uso do JUnit Platform para testes
}

jar {
	enabled = true // Permitir geração do JAR
}

tasks.named('bootRun') {
	jvmArgs = ['-Dspring.profiles.active=dev'] // Perfil de desenvolvimento (opcional)
}

test {
	testLogging {
		events "started", "passed", "failed", "skipped"  // Exibe todos os eventos dos testes
		showStandardStreams = true  // Exibe as saídas de `System.out` e `System.err` no console
	}
}

